--- a/view/index.html
+++ b/view/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>AgriCrop</title>
 </head>
 <body>
-    
+    <!-- navigation bar -->
+    <div class="navbar">
+        <!-- navbar content -->
+        <div class="container">
+            <!-- navbar brand -->
+            <div class="navbar-brand">
+                <!-- logo -->
+                <img src="../assets/img/logo/Layer 2.svg" alt="">
+                <!-- company name -->
+                <p class="brand">AgriCrop</p>
+            </div>
+            <!-- end of navbar brand -->
+
+            <!-- hamburger menu -->
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+            <!-- nav links -->
+            <nav>
+                <ul class="navlinks">
+                    <li><a href="" class="links">Home</a></li>
+                    <li><a href="" class="links">About Us</a></li>
+                    <li><a href="" class="links">Services</a></li>
+                    <li><a href="" class="links">Contact Us</a></li>
+                    <li><a href="" class="links">Login</a></li>
+                    <li><a href="" class="links">Create account</a></li>
+                </ul>
+            </nav>
+            <!-- end of nav links -->
+        </div>
+        <!-- end of navbar content -->
+    </div>
+    <!-- end of navigation bar -->
 </body>
 </html>
