created hamburger menu

--- a/view/index.html
+++ b/view/index.html
@@ -15,7 +15,7 @@
             <!-- navbar brand -->
             <div class="navbar-brand">
                 <!-- logo -->
-                <img src="../assets/img/logo/Layer 2.svg" alt="">
+                <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
                 <!-- company name -->
                 <p class="brand">AgriCrop</p>
             </div>
@@ -44,5 +44,7 @@
         <!-- end of navbar content -->
     </div>
     <!-- end of navigation bar -->
+
+<script src="../js/index.js"></script>
 </body>
 </html>
