--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,31 @@ body{
     width: 100%;
 }
 
-.container, .navbar-brand, .navlinks{
+.container, .navbar-brand{
     display: flex;
     align-items: center;
 }
 
 .container{
+    padding-top: 10px;
     width: 90%;
     margin: auto;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    /* border: 1px solid white; */
+}
+
+.navbar-brand{
+    flex: 1;
+}
+
+.navlinks{
+    display: none;
+}
+
+.navbar-brand p{
+    padding: 0 10px;
+    font-size: 1.5rem;
 }
 
 .navlinks li{
@@ -38,6 +54,39 @@ body{
     color: white;
     text-decoration: none;
 }
+
+/* hamburger */
+
+.burger{
+
+}
+
+.line1, .line2, .line3{
+    margin: 3px;
+    padding: 3px;
+    width: 35px;
+    background-color: white;
+    transition: all 0.3s ease;
+}
+
+.resNav .line1{
+    transform: rotate(45deg) translate(5px, 8px);
+}
+
+.resNav .line2{
+    transform: translateX(-500px);
+    opacity: 0;
+}
+
+.resNav .line3{
+    transform: rotate(-45deg) translate(5px, -8px);
+}
+
+.navlinks.navSlide{
+    display: flex;
+    flex-direction: column;
+}
+
 
 
 
