--- a/view/index.html
+++ b/view/index.html
@@ -36,7 +36,7 @@
                     <li><a href="" class="links">Services</a></li>
                     <li><a href="" class="links">Contact Us</a></li>
                     <li><a href="" class="links">Login</a></li>
-                    <li><a href="" class="links">Create account</a></li>
+                    <li id="createacc"><a href="" class="links">Create account</a></li>
                 </ul>
             </nav>
             <!-- end of nav links -->
@@ -44,6 +44,27 @@
         <!-- end of navbar content -->
     </div>
     <!-- end of navigation bar -->
+
+    <!-- main content -->
+    <main>
+        <section class="presentation">
+            <!-- intro text -->
+            <div class="intro-header">
+                <p class="large">A Way of Revolutionizing Agriculture</p>
+            </div>
+
+            <!-- illustration -->
+            <div class="illustration">
+                <img src="../assets/img/illustration/Layer 2.svg" alt="" width="620">
+            </div>
+
+            <!-- closing text -->
+            <div class="c-text">
+                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <input type="button" value="Learn more">
+            </div>
+        </section>
+    </main>
 
 <script src="../js/index.js"></script>
 </body>
