--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,8 @@ body{
 }
 
 .presentation{
+    /* padding: 20px; */
+    display: block;
     width: 90%;
     margin: auto;
     text-align: center;
@@ -121,6 +123,7 @@ input[type="button"]{
     border-radius: 10px;
     color: white;
     font-size: 1.2rem;
+    border: transparent;
 }
 
 
