--- a/view/homepage.html
+++ b/view/homepage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/homepage.css">
     <title>AgriCrop</title>
 </head>
 <body>
@@ -56,7 +57,7 @@
 
             <!-- illustration -->
             <div class="illustration">
-                <img src="../assets/img/illustration/Layer 2.svg" alt="" width="620">
+                <img src="../assets/img/illustration/h3.svg" alt="" width="620" >
             </div>
 
             <!-- closing text -->
@@ -65,6 +66,24 @@
                 <input type="button" value="Learn more" onclick="document.location.href='homepage.html'">
             </div>
         </section>
+
+        <!-- section 2 -->
+        <section class="mb-content">
+            <!-- heading -->
+            <div class="ab-content">
+                <p class="heading">About AgriCrop</p>
+
+                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+            </div>
+
+            <!-- illustration -->
+            <div class="illustration-2">
+                <img src="../assets/img/illustration/plant.svg" alt="">
+            </div>
+            
+        </section>
+        <!-- end of section 2 -->
     </main>
 
 <script src="../js/index.js"></script>
