--- a/view/homepage.html
+++ b/view/homepage.html
@@ -84,6 +84,62 @@
             
         </section>
         <!-- end of section 2 -->
+
+
+        <!-- start of values section -->
+        <section class="ab-values">
+            <!-- heading -->
+            <p class="heading">Our values</p>
+
+            <!-- container -->
+
+            <div class="ab-container">
+                <!-- content -->
+                <div class="values">
+                    <!-- value item -->
+                    <div class="value">
+                        <!-- icon -->
+                        <img src="../assets/img/icons/Icon awesome-lightbulb.svg" alt="" width="70">
+                        <!-- text -->
+                        <div class="text-content">
+                            <p class="medium">INNOVATION</p>
+                            <p >We foster a work environment where creative thinking is encouraged and rewarded in order to create opportunities for process improvement and more cost-effective sustainable products and services, providing value to the Company and our customers.</p>
+                        </div>
+                        
+                    </div>
+                    
+                    <!-- value item -->
+                    <div class="value">
+                        <!-- icon -->
+                        <img src="../assets/img/icons/Icon material-high-quality.svg" alt="" width="70">
+                        <!-- text -->
+                        <div class="text-content">
+                            <p class="medium">QUALITY</p>
+                            <p >We foster a work environment where creative thinking is encouraged and rewarded in order to create opportunities for process improvement and more cost-effective sustainable products and services, providing value to the Company and our customers.</p>
+                        </div>
+                    </div>
+
+                    <!-- value item -->
+                    <div class="value">
+                        <!-- icon -->
+                        <img src="../assets/img/icons/icons8-customer-insight-100.svg" alt="" width="90">
+                        <!-- text -->
+                        <div class="text-content">
+                            <p class="medium">CUSTOMER</p>
+                            <p >We foster a work environment where creative thinking is encouraged and rewarded in order to create opportunities for process improvement and more cost-effective sustainable products and services, providing value to the Company and our customers.</p>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- end of content -->
+
+                <!-- illustrations -->
+                <img src="../assets/img/illustration/Layer -1.svg" alt="" class="bulb1">
+                <img src="../assets/img/illustration/Layer -1.svg" alt="" class="bulb2">
+
+            </div>
+            
+        </section>
     </main>
 
 <script src="../js/index.js"></script>
