--- a/view/homepage.html
+++ b/view/homepage.html
@@ -67,11 +67,11 @@
             </div>
         </section>
 
-        <!-- section 2 -->
+        <!-- section 2 About section-->
         <section class="mb-content">
             <!-- heading -->
             <div class="ab-content">
-                <p class="heading">About AgriCrop</p>
+                <p class="heading ab-heading">About AgriCrop</p>
 
                 <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
                 <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
@@ -87,13 +87,13 @@
 
 
         <!-- start of values section -->
-        <section class="ab-values">
+        <section class="v-values">
             <!-- heading -->
             <p class="heading">Our values</p>
 
             <!-- container -->
 
-            <div class="ab-container">
+            <div class="v-container">
                 <!-- content -->
                 <div class="values">
                     <!-- value item -->
@@ -122,7 +122,7 @@
                     <!-- value item -->
                     <div class="value">
                         <!-- icon -->
-                        <img src="../assets/img/icons/icons8-customer-insight-100.svg" alt="" width="90">
+                        <img src="../assets/img/icons/icons8-customer-insight-100.svg" alt="" width="70">
                         <!-- text -->
                         <div class="text-content">
                             <p class="medium">CUSTOMER</p>
@@ -130,6 +130,7 @@
                         </div>
                     </div>
 
+                    
                 </div>
                 <!-- end of content -->
 
