--- a/view/homepage.html
+++ b/view/homepage.html
@@ -62,7 +62,7 @@
 
             <!-- closing text -->
             <div class="c-text">
-                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <input type="button" value="Learn more" onclick="document.location.href='homepage.html'">
             </div>
         </section>
@@ -73,8 +73,8 @@
             <div class="ab-content">
                 <p class="heading ab-heading">About AgriCrop</p>
 
-                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-                <p class="medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
             </div>
 
             <!-- illustration -->
@@ -122,7 +122,7 @@
                     <!-- value item -->
                     <div class="value">
                         <!-- icon -->
-                        <img src="../assets/img/icons/icons8-customer-insight-100.svg" alt="" width="70">
+                        <img src="../assets/img/icons/Icon awesome-connectdevelop.svg" alt="" width="70">
                         <!-- text -->
                         <div class="text-content">
                             <p class="medium">CUSTOMER</p>
@@ -138,6 +138,70 @@
                 <img src="../assets/img/illustration/Layer -1.svg" alt="" class="bulb1">
                 <img src="../assets/img/illustration/Layer -1.svg" alt="" class="bulb2">
 
+            </div>
+
+        </section>
+
+        <!-- services section -->
+        <section class="sc-content">
+            <!-- heading -->
+            <p class="heading">What we offer?</p>
+
+            <!-- intro text -->
+            <p class="medium">We strive to provide exceptional customer service through flexible scheduling, quality products, efficient services, and innovative solutions resulting in value to the customer and company.</p>
+
+            <div class="sc-container">
+                <div class="service">
+                    <!-- icon -->
+                    <img src="../assets/img/icons/icons8-raspberry-200.svg" alt="">
+                    <!-- text -->
+                    <div class="text-content tx">
+                        <p class="medium">FARM PRODUCE</p>
+                        <p>We strive to provide exceptional customer service through flexible scheduling, quality products, efficient services, and innovative solutions resulting in value to the customer and company.</p>
+                    </div>
+                    
+                </div>
+
+                <div class="service">
+                    <!-- icon -->
+                    <img src="../assets/img/icons/icons8-raspberry-200.svg" alt="">
+                    <!-- text -->
+                    <div class="text-content tx">
+                        <p class="medium">ONLINE SHOPPING</p>
+                        <p>We strive to provide exceptional customer service through flexible scheduling, quality products, efficient services, and innovative solutions resulting in value to the customer and company.</p>
+                    </div>
+                </div>
+
+                <div class="service">
+                    <!-- icon -->
+                    <img src="../assets/img/icons/icons8-raspberry-200.svg" alt="">
+                    <!-- text -->
+                    <div class="text-content tx">
+                        <p class="medium">CUSTOMER CARE</p>
+                        <p>We strive to provide exceptional customer service through flexible scheduling, quality products, efficient services, and innovative solutions resulting in value to the customer and company.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of services section -->
+
+        <!-- Additional services -->
+        <section class="as-content">
+            <!-- heading -->
+            <p class="heading">Additional Services</p>
+
+            <div>
+                <!-- illustration -->
+                <div class="illustration">
+                    <img src="../assets/img/illustration/basket.svg" alt="">
+                </div>
+
+                <!-- content -->
+                <div class="text-content">
+                    <p class="medium">Support our local farmers</p>
+                    <p>We take pride in providing high value products and services that we stand behind, which ensures customer satisfaction, profitability and the future of our employees and our growth. profitability and the future of our employees and our growth.</p>
+                    <input type="button" value="Make a donation">
+                </div>
             </div>
             
         </section>
