--- a/view/homepage.html
+++ b/view/homepage.html
@@ -190,21 +190,25 @@
             <!-- heading -->
             <p class="heading">Additional Services</p>
 
-            <div>
+            <div class="as-section">
                 <!-- illustration -->
-                <div class="illustration">
+                <div class="illustration-2">
                     <img src="../assets/img/illustration/basket.svg" alt="">
                 </div>
 
                 <!-- content -->
                 <div class="text-content">
-                    <p class="medium">Support our local farmers</p>
-                    <p>We take pride in providing high value products and services that we stand behind, which ensures customer satisfaction, profitability and the future of our employees and our growth. profitability and the future of our employees and our growth.</p>
+                    <p class="large">Support our local farmers</p>
+                    <p class="medium-left">We take pride in providing high value products and services that we stand behind, which ensures customer satisfaction, profitability and the future of our employees and our growth. profitability and the future of our employees and our growth.</p>
                     <input type="button" value="Make a donation">
                 </div>
             </div>
             
         </section>
+        <!-- end additional services -->
+
+
+        
     </main>
 
 <script src="../js/index.js"></script>
