--- a/view/homepage.html
+++ b/view/homepage.html
@@ -208,7 +208,26 @@
         <!-- end additional services -->
 
 
-        
+        <!-- join us section -->
+        <section class="join-us">
+            <div class="inner">
+                <!-- intro text -->
+                <div class="intro-header">
+                    <p class="large">Join us and let’s end hunger together!</p>
+                </div>
+
+                <!-- illustration -->
+                <div class="illustration">
+                    <img src="../assets/img/illustration/Layer -2.svg" alt="" width="620" >
+                </div>
+
+                <!-- closing text -->
+                <div class="c-text">
+                    <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <input type="button" value="Learn more" onclick="document.location.href='homepage.html'">
+                </div>
+            </div>
+        </section>
     </main>
 
 <script src="../js/index.js"></script>
