--- a/view/homepage.html
+++ b/view/homepage.html
@@ -228,6 +228,65 @@
                 </div>
             </div>
         </section>
+        <!-- end of join us section -->
+
+        <!-- footer -->
+        <footer>
+            <div class="f-heading">
+                <div class="left-content">
+                    <p class="medium medium-left">AgriCrop</p>
+
+                    <p class="hide">Join the fight against hunger</p>
+                </div>
+
+                <!-- social media links -->
+                <div class="socials">
+                    <img src="../assets/img/icons/Icon awesome-facebook.svg" alt="">
+                    <img src="../assets/img/icons/Icon awesome-instagram.svg" alt="">
+                    <img src="../assets/img/icons/Icon awesome-twitter.svg" alt="">
+                    <img src="../assets/img/icons/Icon awesome-linkedin.svg" alt="">
+                </div>
+
+                
+            </div>
+
+            <!-- other links -->
+            <div class="f-links">
+                <div class="left-links">
+                    <p>Contacts</p>
+                    <p>FAQ</p>
+                    <p>Donation</p>
+                    <p>Terms of Service</p>
+                    <p>Privacy policy</p>
+                </div>
+
+                <div class="right-links">
+                    <p>AgriCrop</p>
+                    <p>Services</p>
+                    <p>News</p>
+                    <p>Shopping</p>
+                    <p>Additional features</p>
+                </div>
+            </div>
+
+            <!-- subscription -->
+            <div class="subscription">
+                <div class="msg">
+                    <img src="../assets/img/icons/Icon feather-mail.svg" alt="">
+                    <p>Stay up to date on the latest from AgriCrop</p>
+                </div>
+
+                <!-- input box -->
+                <input type="text" name="" id="" placeholder="Enter email address">
+
+                <input type="button" value="Subscribe">
+            </div>
+        </footer>
+        <hr>
+        <div class="copyright">
+            <img src="../assets/img/icons/Icon awesome-copyright.svg" alt="">
+            <p>2021 AgriCrop</p>
+        </div>
     </main>
 
 <script src="../js/index.js"></script>
