--- a/css/homepage.css
+++ b/css/homepage.css
@@ -56,7 +56,7 @@ body{
 .bulb2{
     width: 70%;
     position: absolute;
-    bottom: 1200px;
+    bottom: 55%;
     left: 15%;
     opacity: 0.3;
     z-index: -3;
@@ -263,6 +263,33 @@ input[type="text"]{
     .text-content .large{
         font-size: 3rem;
         margin-bottom: 40px;
+    }
+
+    footer{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .f-heading{
+        flex-basis: 100%;
+    }
+
+    .left-content{
+        flex: 1;
+    }
+
+    .f-links{
+        flex: 1;
+    }
+
+    .left-links{
+        flex: 0.5;
+    }
+
+    .socials img{
+        width: 15%;
+        padding: 8px;
     }
 
 }
