--- a/view/homepage.html
+++ b/view/homepage.html
@@ -253,19 +253,19 @@
             <!-- other links -->
             <div class="f-links">
                 <div class="left-links">
-                    <p>Contacts</p>
-                    <p>FAQ</p>
-                    <p>Donation</p>
-                    <p>Terms of Service</p>
-                    <p>Privacy policy</p>
+                    <p><a href="#">Contacts</a></p>
+                    <p><a href="#">FAQ</a></p>
+                    <p><a href="#">Donation</a></p>
+                    <p><a href="#">Terms of Service</a></p>
+                    <p><a href="#">Privacy policy</a></p>
                 </div>
 
                 <div class="right-links">
-                    <p>AgriCrop</p>
-                    <p>Services</p>
-                    <p>News</p>
-                    <p>Shopping</p>
-                    <p>Additional features</p>
+                    <p><a href="#">AgriCrop</a></p>
+                    <p><a href="#">Services</a></p>
+                    <p><a href="#">News</a></p>
+                    <p><a href="#">Shopping</a></p>
+                    <p><a href="#">Additional features</a></p>
                 </div>
             </div>
 
