--- a/view/homepage.html
+++ b/view/homepage.html
@@ -63,7 +63,7 @@
             <!-- closing text -->
             <div class="c-text">
                 <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <input type="button" value="Learn more" onclick="document.location.href='homepage.html'">
+                <input type="button" value="Login" onclick="document.location.href='homepage.html'" id="login">
             </div>
         </section>
 
@@ -200,7 +200,7 @@
                 <div class="text-content">
                     <p class="large">Support our local farmers</p>
                     <p class="medium-left">We take pride in providing high value products and services that we stand behind, which ensures customer satisfaction, profitability and the future of our employees and our growth. profitability and the future of our employees and our growth.</p>
-                    <input type="button" value="Make a donation">
+                    <input type="button" class="b-icon" value="Make a donation" id="donate">
                 </div>
             </div>
             
