--- a/view/login.html
+++ b/view/login.html
@@ -18,7 +18,7 @@
                 <!-- logo -->
                 <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
                 <!-- company name -->
-                <p class="brand">AgriCrop</p>
+                <!-- <p class="brand">AgriCrop</p> -->
             </div>
             <!-- end of navbar brand -->
 
@@ -52,8 +52,10 @@
             <div class="login-plaque">
                 <div class="left-side">
                     <!-- heading -->
-                    <p class="h-text">USER<br>LOGIN</p>
+                    <img src="../assets/img/icons/Icon awesome-user-circle.svg" alt="" width="150">
+                    <p class="h-text">USER LOGIN</p>
                     <p class="slogan">Welcome to AgriCrop</p>
+                   
 
                     <!-- login form -->
                     <div class="login-form">
@@ -72,6 +74,12 @@
 
                             <!-- button -->
                             <input type="button" value="Login">
+
+                            <!-- create account and forgot password -->
+                            <div class="ques">
+                                <p>Not a member? <a href="">Create an Account</a></p>
+                                <p><a href="">Forgot password?</a></p>
+                            </div>
                         </form>
                     </div>
                 </div>
