--- a/view/login.html
+++ b/view/login.html
@@ -85,8 +85,10 @@
                 </div>
 
                 <div class="right-side">
-
+                    <!-- illustration -->
+                    <!-- <img src="../assets/img/illustration/login-bg.svg" alt=""> -->
                 </div>
+                
             </div>
         </section>
     </main>
