--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,7 @@
 
 body{
     background-color: #010B23;
+    position: relative;
 }
 
 :root{
@@ -44,7 +45,19 @@ body{
 .field input[type="text"], .field input[type="password"]{
     width: 100%;
     padding: 15px;
+    text-indent: 20px;
+}
 
+
+.field i{
+    position: absolute;
+}
+
+.icon {
+    padding: 15px;
+    color: rgb(49, 0, 128);
+    width: 70px;
+    text-align: left;
 }
 
 input[type="button"]{
