--- a/view/login.html
+++ b/view/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/login.css">
     <title>AgriCrop-Login</title>
+    <script src="https://use.fontawesome.com/dfe99fdb12.js"></script>
 </head>
 <body>
     <!-- navigation bar -->
@@ -63,12 +64,14 @@
                             <!-- username field -->
                             <div class="field">
                                 <label for="">Email</label>
+                                <i class="fa fa-envelope icon"></i>
                                 <input type="text" name="" id="" placeholder="Email">
                             </div>
 
                             <!-- password field -->
                             <div class="field">
                                 <label for="">Password</label>
+                                <i class="fa fa-lock icon"></i>
                                 <input type="password" name="" id="" placeholder="Password">
                             </div>
 
