--- a/view/signup.html
+++ b/view/signup.html
@@ -85,7 +85,7 @@
                             <div class="field">
                                 <label for="">Confirm Password</label>
                                 <i class="fa fa-lock icon"></i>
-                                <input type="password" name="" id="" placeholder="Password">
+                                <input type="password" name="" id="" placeholder="Confirm Password">
                             </div>
 
                             <!-- button -->
@@ -98,7 +98,6 @@
                         </form>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
