--- a/css/team.css
+++ b/css/team.css
@@ -8,9 +8,6 @@
     font-size: 16px;
 }
 
-body{
-
-}
 
 .heading{
     text-align: center;
@@ -20,3 +17,77 @@ body{
 .heading p{
     font-size: 2rem;
 }
+
+.heading hr{
+    width: 20%;
+    margin: auto;
+    border-color: #C9540F;
+}
+
+.member{
+    width: 90%;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.p-container{
+    max-width: 100%;
+    height: auto;
+    /* border: 1px solid red; */
+    object-fit: contain;
+}
+
+.p-container img{
+    width: 100%;
+    /* height: 100%; */
+    /* object-fit: contain; */
+}
+
+.content .name{
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+}
+
+.s-media img{
+    width: 10%;
+    margin: 20px;
+}
+
+input[type="button"]{
+    padding: 15px;
+    width: 100%;
+    margin-top: 25px;
+    background-color: #43A047;
+    border-radius: 10px;
+    color: white;
+    font-size: 1.2rem;
+    border: transparent;
+}
+
+footer a{
+    color: black;
+}
+
+
+/* DESKTOP STYLES */
+ @media screen and (min-width: 800px) {
+    .member{
+        display: flex;
+        align-items: center;
+    }
+
+    .content{
+        text-align: left;
+        padding: 50px;
+    }
+
+    .p-container{
+        width: 100%;
+    }
+
+    .s-media img{
+        width: 5%;
+        margin: 20px 20px 0px 0px;
+    }
+
+ }
