--- a/view/team.html
+++ b/view/team.html
@@ -158,6 +158,7 @@ unchanged. It was popularised in the 1960s wi</p>
         </section>
 
     <!-- footer -->
+    <div class="footer">
         <footer>
             <div class="f-heading">
                 <div class="left-content">
@@ -204,16 +205,19 @@ unchanged. It was popularised in the 1960s wi</p>
                 </div>
 
                 <!-- input box -->
-                <input type="text" name="" id="" placeholder="Enter email address">
+                <input type="text" name="" id="" placeholder="Enter email address" class="t-textbox">
 
                 <input type="button" value="Subscribe">
             </div>
         </footer>
-        <hr>
-        <div class="copyright">
-            <img src="../assets/img/icons/Icon awesome-copyright.svg" alt="">
-            <p>2021 AgriCrop</p>
-        </div>
+        <!-- <hr> -->
+        
+    </div>
+    <div class="copyright">
+        <img src="../assets/img/icons/Icon awesome-copyright.svg" alt="">
+        <p>2021 AgriCrop</p>
+    </div>
+        
     </main>
 
 <script src="../js/index.js"></script>
